# voicevox_core

.cargo/: config.toml
crates/voicevox_core/: Cargo.toml
