[package]
name = "voicevox_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
directml = ["onnxruntime/directml"]


[dependencies]
anyhow.workspace = true
cfg-if = "1.0.0"
derive-getters = "0.2.0"
derive-new = "0.5.9"
once_cell.workspace = true
onnxruntime = { git = "https://github.com/haru3me/onnxruntime-rs.git", rev="d569754a494cc0e9fb67f55afcd7e82e214bd8be" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
open_jtalk = { git = "https://github.com/haru3me/open_jtalk-rs.git", rev="03f8e7e297c48e7114cdd4171086c9a8937fc08a" }
regex = "1.6.0"

[dev-dependencies]
rstest = "0.15.0"
pretty_assertions = "1.3.0"
async-std = { version = "1.12.0", features = ["attributes"] }
surf = "2.3.2"
flate2 = "1.0.24"
tar = "0.4.38"
heck = "0.4.0"
