[package]
name = "voicevox_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
directml = ["onnxruntime/directml"]


[dependencies]
anyhow.workspace = true
cfg-if = "1.0.0"
derive-getters = "0.2.0"
derive-new = "0.5.9"
once_cell.workspace = true
onnxruntime = { git = "https://github.com/haru3me/onnxruntime-rs.git", rev="77e4542777f7a0420eb2bb2e6ad67dfecb138716" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
open_jtalk = { git = "https://github.com/haru3me/open_jtalk-rs.git", rev="da209db4648874a8b81e0dd2e8d67f8b1a748a56" }
regex = "1.6.0"

[dev-dependencies]
rstest = "0.15.0"
pretty_assertions = "1.3.0"
async-std = { version = "1.12.0", features = ["attributes"] }
surf = "2.3.2"
flate2 = "1.0.24"
tar = "0.4.38"
heck = "0.4.0"
